# rust-server-projects

./: .gitignore  Cargo.toml  README.md
.github/workflows/: comits.yml  crate_tag_update.yml
rust-file-compression/: Cargo.toml  compress.txt  file.txt
rust-file-compression/src/: compress_parameters.rs  database.rs  main.rs
rust-hello-server/: Cargo.toml
rust-hello-server/public/: index.html
rust-hello-server/src/: main.rs
rust-hello-server/src/routers/: get_routes.rs  mod.rs  post_routes.rs
rust-hello-server/uploaded_files/: person.sql
rust-hello-server/uploads/: file2.txt
server_upload/: Cargo.toml
server_upload/src/: main.rs
src/: main.rs
weather-app/: Cargo.toml  README.md
weather-app/src/: main.rs  structs.rs
