[package]
name = "weather-app"
version = "0.1.0"
edition = "2021"
authors = ["Nkwenti-Severian <halamadrid651643565@gmail.com>"]
description = "A simple CLI tool to fetch weather data, by default uses you ip location"
repository = "https://github.com/Nkwenti-Severian-Ndongtsop/rust-server-projects"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["weather", "cli", "forecast", "geolocation", "api"]

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
